--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5628100854266739"
+     crossorigin="anonymous"></script>
 <script data-ad-client="ca-pub-9613071028938611" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script src="https://contextual.media.net/dmedianet.js?cid=8CU5BN92D" async="async"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
